--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,5 @@
-<%= link_to 'logout', logout_path %>
+<p><%= link_to 'logout', logout_path %> <%= link_to 'edit', edit_user_path(@user) %> <%= link_to 'delete account', user_path, method: 'delete', data: { confirm: 'Are you sure?' } %></p>
 <h1><%= @user.first_name %> <%= @user.last_name %></h1>
+<p>Email: <%= @user.email %></p>
+<p>Zipcode: <%= @user.zipcode %></p>
+<p>Age: <%= @user.age %></p>
