Interests Begun & Basic Admin Functionality

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -54,6 +54,11 @@
   <% end %>
 
   <div>
+    <%= f.label :profile_pic %>
+    <%= f.text_field :profile_pic %>
+  </div>
+
+  <div>
     <%= f.submit %>
   </div>
 
