--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,10 @@
 .field_with_errors input {
   border: 2px solid red;
 }
+img.profile {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  display: block;
+  border-radius: 50%;
+}
