--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @user.first_name %> <%= @user.last_name %></h1>
+<img class="profile" src="<%= @user.profile_pic %>" alt="">
 <p>Email: <%= @user.email %></p>
 <p>Zipcode: <%= @user.zipcode %></p>
 <p>Age: <%= @user.age %></p>
