Users can add and remove interests

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,11 @@ img.profile {
   width: 100px;
   height: 100px;
   overflow: hidden;
+  clip: rect(0px, 0px, 0px, 0px);
   display: block;
   border-radius: 50%;
+}
+img.logo {
+  display: block;
+  margin: 0 auto;
 }
