--- a/app/views/interests/show.html.erb
+++ b/app/views/interests/show.html.erb
@@ -3,4 +3,4 @@
 <h4>Users with this Interest:</h4>
 <p>Coming soon!</p>
 
-<%= link_to 'delete', @interest, method: 'delete', data: { confirm: 'Are you sure? '} %>
+<%= link_to 'edit', edit_interest_path(@interest) %> <%= link_to 'delete', @interest, method: 'delete', data: { confirm: 'Are you sure? '} %>
