--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,3 +3,11 @@
 <p>Email: <%= @user.email %></p>
 <p>Zipcode: <%= @user.zipcode %></p>
 <p>Age: <%= @user.age %></p>
+<% @user.interests.each do |interest| %>
+  <ul>
+    <li><%= interest.name %></li>
+  </ul>
+<% end %>
+<%= link_to 'edit account', edit_user_path(@user) %>
+<%= link_to 'update interests', select_interests_path %>
+<p>remove interests</p>
