Users can add AND remove interests AND pre-selected interestes show up already selected

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,4 @@
 <% end %>
 <%= link_to 'edit account', edit_user_path(@user) %>
 <%= link_to 'update interests', select_interests_path %>
-<p>remove interests</p>
+<p>request meetup</p>
