--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <%= link_to "edit", edit_user_path(current_user.id), controller: 'users' %>
    <% if current_user.admin %>
     <%= link_to "Users", users_path %> <%= link_to "Interests", interests_path %>
+    <%= link_to "Requests", requests_path %>
    <% end %>
   <% else %>
     <%= link_to "Login", login_path %> <%= link_to "Sign Up", new_user_path, controller: 'users' %><br>
