--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @user.first_name %> <%= @user.last_name %></h1>
-<img class="profile" src="<%= @user.profile_pic %>" alt="">
+<div class="circle"><img class="profile" src="<%= @user.profile_pic %>" alt=""></div>
 <p>Email: <%= @user.email %></p>
 <p>Zipcode: <%= @user.zipcode %></p>
 <p>Age: <%= @user.age %></p>
@@ -10,11 +10,18 @@
   </ul>
 <% end %>
 <h4>Current Meetup Requests:</h4>
+
+<% if @user.requests == [] %>
+  <ul>
+    <li>No pending meetup requests. <%= link_to 'Would you like to request one?', new_request_path %></li>
+  </ul>
+<% end %>
 <% @user.requests.each do |request| %>
   <ul>
     <li><%= request.date.strftime("%b %d, %Y") %> at <%= request.time.strftime "%l%P" %> - <%= link_to request.confirmed == true ? "Confirmed" : "Pending" , request %> </li>
   </ul>
 <% end %>
+
 <%= link_to 'edit account', edit_user_path(@user) %>
 <%= link_to 'update interests', select_interests_path %>
 <%= link_to 'request meetup', new_request_path %>
