--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -34,6 +34,11 @@
     <%= f.date_field :dob %>
   </div>
 
+  <div>
+    <%= f.label :about %>
+    <%= f.text_area :about %>
+  </div>
+
   <% if params[:action] != "edit" %>
   <div>
     <%= f.label :password %>
