--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -59,7 +59,7 @@
   <% end %>
 
   <div>
-    <%= f.label :profile_pic %>
+    <%= f.label "Profile URL" %>
     <%= f.text_field :profile_pic %>
   </div>
 
