--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Sign Up for Coffee Talk</h1>
-<%= render "form" %>
+<body class="homepage sixteen columns">
+  <div class="wrapper-new">
+    <div class="signup nine columns">
+      <h1>Sign Up for Coffee Talk</h1>
+      <%= render "form" %>
+    </div>
+  </div>
+</body>
