--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,47 +11,208 @@
  *= require_self
  *= require_tree .
  */
-/*body {
-  line-height: 1.4;
-  font-family: Georgia, serif;
-}*/
-/*body.homepage {
+
+body.homepage {
   background: url(http://i.imgur.com/1EjXFBv.jpg) no-repeat;
   background-size: cover;
-}*/
-/*div.header {
-  background: white;
-}*/
-/*nav .top-menu {
+}
+
+div.header {
+
+}
+nav .top-menu {
+  display: inline-block;
   float: right;
-}*/
-/*h1 {
-  font-size: 36px;
-  font-weight: 900;
-}*/
+  background: rgba(16,9,0,1);
+  border-radius: 10px;
+  height: 60px;
+  width: 220px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 60px;
+}
+nav .top-menu-login {
+  display: inline-block;
+  float: right;
+  height: 60px;
+  width: 500px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 60px;
+}
+nav .nav-link {
+  color: white;
+  font-weight: bold;
+  vertical-align: middle;
+  padding-right: 10px;
+}
+nav .nav-link-login {
+  color: border-left: ;
+  font-weight: bold;
+  vertical-align: middle;
+  padding-right: 10px;
+}
+div.wrapper-new {
+  display: block;
+  margin: 0 auto;
+  width: 520px;
+}
+div.wrapper-about {
+  display: block;
+  margin: 0 auto;
+  width: 700px;
+}
+div.login {
+  color: white;
+  font-weight: bold;
+  background: rgba(16,9,0,0.7);
+  border-radius: 20px;
+  padding: 20px;
+  margin-top: 50px;
+  text-align: center;
+}
+div.login h1.login-text {
+  text-align: left;
+}
+div.about {
+  color: white;
+  background: rgba(16,9,0,0.7);
+  border-radius: 20px;
+  padding: 20px;
+  margin-top: 50px;
+  text-align: justify;
+}
+div.signup {
+  color: white;
+  background: rgba(16,9,0,0.7);
+  border-radius: 20px;
+  padding: 20px;
+  margin-top: 50px;
+  text-align: left;
+  margin-bottom: 50px;
+}
+div.wrapper {
+  display: block;
+  margin: 0 auto;
+  width: 700px;
+}
+
+div.wrapper a {
+  color: white;
+}
+div.wrap-info .bot-menu {
+  float: right;
+  padding-top: 10px;
+}
+div.wrap-info .bot-link {
+  padding-left: 10px;
+}
+div.profile-wrap {
+  background: rgba(16,9,0,0.7);
+  border-radius: 20px;
+  padding: 40px;
+  margin-top: 40px;
+  color: white;
+}
 
 .field_with_errors input {
   border: 2px solid red;
 }
+div.profile-img-wrap {
+  width: 200px;
+  margin :0 auto;
+}
+div.wrap-info {
+  width: 580px;
+  margin-top: 200px;
+}
 img.profile {
   display: block;
-  width: 100px;
+  width: 150px;
   margin: 0 auto;
 }
 img.logo {
   display: block;
-  margin: 0 auto;
+  margin-left: 40px;
 }
 .circle {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   float: left;
   display: inline-block;
   overflow: hidden;
-  margin-right: 10px;
+  maring: 0 auto;
 }
 img.location-image {
   width: 400px;
 }
 
+
+/* #Forms
+================================================== */
+
+  form {
+    margin-bottom: 20px; }
+  fieldset {
+    margin-bottom: 20px; }
+  input[type="text"],
+  input[type="password"],
+  input[type="email"],
+  input[type="number"],
+  input[type="date"],
+  input[type="checkbox"]
+  textarea,
+  select {
+    border: 1px solid #ccc;
+    padding: 6px 4px;
+    outline: none;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    font: 13px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #777;
+    margin: 0;
+    width: 210px;
+    max-width: 100%;
+    display: block;
+    margin-bottom: 20px;
+    background: #fff;
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  select {
+    padding: 0; }
+  input[type="text"]:focus,
+  input[type="password"]:focus,
+  input[type="email"]:focus,
+  input[type="number"]:focus,
+  input[type="date"]:focus,
+  textarea:focus {
+    border: 1px solid #aaa;
+    color: #444;
+    -moz-box-shadow: 0 0 3px rgba(0,0,0,.2);
+    -webkit-box-shadow: 0 0 3px rgba(0,0,0,.2);
+    box-shadow:  0 0 3px rgba(0,0,0,.2);
+    }
+  textarea {
+    min-height: 60px; }
+  label,
+  legend {
+    display: block;
+    font-weight: bold;
+    font-size: 13px;
+    text-align: center;
+  }
+  select {
+    width: 220px; }
+  input[type="checkbox"] {
+    display: block;
+    margin: 0 auto;
+  }
+  label span,
+  legend span {
+    font-weight: normal;
+    font-size: 13px;
+    color: #444; }
