--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,25 +12,30 @@
   <div class="container">
     <div class="header sixteen columns">
       <a href="<%= root_path %>"><img class="logo" src="http://i.imgur.com/XWnbmbg.png" width="200"></a>
-      <nav class="thirteen columns">
-        <div class="top-menu"><% if current_user  %>
-          Hello, <%= current_user.first_name %>! <br>
-          <%= link_to "Logout", logout_path %>
-          <%= link_to "edit", edit_user_path(current_user.id), controller: 'users' %>
-          <% if current_user.admin %>
-            <%= link_to "Users", users_path %> <%= link_to "Interests", interests_path %>
-            <%= link_to "Requests", requests_path %>
-            <%= link_to "Meetups", meetings_path %>
-          <% end %>
-          <% else %>
-            <%= link_to "Login", login_path %> <%= link_to "Sign Up", new_user_path, controller: 'users' %><br>
-          <% end %>
+      <nav class="fourteen columns">
+        <div class="top-menu-login">
+          <% if current_user  %>
+            <%= link_to "logout", logout_path, class: "nav-link-login" %>
+            <%= link_to "edit", edit_user_path(current_user.id), controller: 'users', class: "nav-link-login" %>
+            <% if current_user.admin %>
+              <%= link_to "users", users_path, class: "nav-link-login" %> <%= link_to "interests", interests_path, class: "nav-link-login" %>
+              <%= link_to "requests", requests_path, class: "nav-link-login" %>
+              <%= link_to "meetups", meetings_path, class: "nav-link-login" %>
         </div>
+            <% end %>
+          <% else %>
+        <div class="top-menu">
+            <%= link_to "about", about_path, class: "nav-link" %>
+            <%= link_to "sign up", new_user_path, controller: 'users', class: "nav-link" %>
+            <%= link_to "login", login_path, class: "nav-link" %>
+        </div>
+          <% end %>
+        </div> <!-- END TOP MENU -->
       </nav>
-    </div>
+    </div> <!-- END HEADER -->
 
   <%= yield %>
 
-  </div>
+  </div> <!-- END CONTAINER -->
 </body>
 </html>
