Updated CSS and Admin in Seed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,7 +47,7 @@ nav .nav-link {
   padding-right: 10px;
 }
 nav .nav-link-login {
-  color: border-left: ;
+  color: border-left;
   font-weight: bold;
   vertical-align: middle;
   padding-right: 10px;
