--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,3 +1,4 @@
+<div class="interest-index-wrap ten columns">
 <h1>All Coffee Talk Meetup Requests</h1>
 <h4>Pending:</h4>
 <% @requests.each do |request| %>
@@ -16,3 +17,4 @@
     </ul>
   <% end %>
 <% end %>
+</div>
