--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,3 +1,4 @@
+<div class="interest-index-wrap ten columns">
 <h1>Meeting Request for <%= @request.date.strftime("%b %d, %Y") %> at <%= @request.time.strftime "%l%P" %></h1>
 <ul>
   <li>Request made by: <%= @request.user.first_name %> <%= @request.user.last_name %> <%= @request.ago %> </li>
@@ -25,3 +26,4 @@
 <% end %>
 <br />
 <%= link_to 'Back', :back %>
+</div>
