--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,7 @@
+<div class="wrapper-new">
+  <div class="signup nine columns">
 <h1>Edit Your Account</h1>
 <%= render "form" %>
 <%= link_to 'delete account', user_path, method: 'delete', data: { confirm: 'Are you sure?' } %>
+  </div>
+</div>
