--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<div class="interest-index-wrap ten columns">
 <h1>All Users</h1>
 <% @users.each do |user| %>
   <table>
@@ -11,3 +12,4 @@
   </tr>
   </table>
 <% end %>
+</div>
