--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,9 +1,9 @@
 <body class="homepage">
 <div class="wrapper">
-  <div class="profile-wrap twelve columns">
+  <div class="profile-wrap ten columns">
     <h2><%= @hello %> <%= @user.first_name %></h2>
-    <div class="profile-img-wrap four columns"><div class="circle"><img class="profile" src="<%= @user.profile_pic %>" alt=""></div></div>
-  <div class="wrap-info ten columns">
+    <div class="profile-img-wrap ten columns"><div class="circle"><img class="profile" src="<%= @user.profile_pic %>"></div></div>
+  <div class="<%= current_user.admin? ? "wrap-info-admin" : "wrap-info" %> ten columns">
     <div class="profile-info">
       <p>Email: <%= @user.email %></p>
       <p>Zipcode: <%= @user.zipcode %></p>
