Added Action Mailer for Sign Up

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -12,7 +12,10 @@
     To login to the site, just follow this link <%= @url %>
   </p>
   <p>
-    Thanks for joining and have a great day!
+    Now I'm all feklehmt. Start meeting people and talk amongst yourselves. I'll give you a topic. The Holy Roman Empire was neither Holy, nor Roman, nor an Empire.
   </p>
+  <p>Discuss.</p>
+
+  <p>Linda Richman</p>
 </body>
 </html>
