--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -6,4 +6,8 @@ your username is: <%= @user.email %>.
 
 To login to the site, just follow this link: <%= @url %>.
 
-Thanks for joining and have a great day!
+Now I'm all feklehmt. Start meeting people and talk amongst yourselves. I'll give you a topic. The Holy Roman Empire was neither Holy, nor Roman, nor an Empire.
+
+Discuss.
+
+Linda Richman
