fixed error in request mailer

--- a/app/views/request_mailer/meeting_scheduled_email.html.erb
+++ b/app/views/request_mailer/meeting_scheduled_email.html.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+  <meta content='text/html; cha set=UTF-8' http-equiv='Content-Type' />
 </head>
 <body>
   <h1>Great News <%= @user.first_name %>, Your Meetup Has been Scheduled!</h1>
