added foundation and started changing layout file

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require foundation_and_overrides
+
  *= require_tree .
  */
 
@@ -24,7 +26,7 @@ nav {
 
 }
 div.logo-img {
-
+  width: 200px;
 }
 nav .top-menu {
   display: inline-block;
