--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Coffee Talk</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+
+  <%= stylesheet_link_tag    "application" %>
+  <%= javascript_include_tag "vendor/modernizr" %>
   <%= csrf_meta_tags %>
-  <link rel="stylesheet" href="skeleton.css">
+
   <link rel="stylesheet" href="application.css">
 </head>
+
+<body>
+
+  <div class="row">
+    <div class="small-8 columns logo-img">
+      <a href="<%= root_path %>"><%= image_tag 'logo.png' %></a>
+    </div>
+  </div> <!-- END LOGO ROW -->
+</body>
+
+
+
 <body class="homepage sixteen columns">
   <div class="container">
     <div class="header sixteen columns">
@@ -35,6 +51,7 @@
     </div> <!-- END HEADER -->
 
   <%= yield %>
+  <%= javascript_include_tag "application" %>
 
   </div> <!-- END CONTAINER -->
 </body>
