--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="profile-wrap twelve columns">
     <h1><%= @user.first_name %> <%= @user.last_name %></h1>
-    <div class="profile-img-wrap four columns"><div class="circle"><img class="profile" src="<%= @user.profile_pic %>" alt=""></div></div>
+    <div class="profile-img-wrap twelve columns"><div class="circle"><img class="profile" src="<%= @user.profile_pic %>" alt=""></div></div>
     <div class="wrap-info ten columns">
     <h4>About Me:</h4>
     <p><%= @user.about %></p>
